# boop

./: .gitignore  Cargo.toml  README.md  wasm.sh
.github/workflows/: ci.yaml  release.yaml
assets/models/: cats.glb
src/: cat_meshes.rs  cats.rs  events.rs  lib.rs  loading.rs  main.rs
src/cats/: mod.rs
src/gameplay/: boop.rs  events.rs  mod.rs  win.rs
src/grid/: events.rs  map.rs  mod.rs  setup.rs
src/player/: events.rs  mod.rs
src/players/: events.rs  mod.rs  plugin.rs
wasm/: index.html
