[package]
name = "boop"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Hertleif <killercup@gmail.com>"]

[dependencies]
bevy = "0.10.1"
bevy_asset_loader = "0.16.0"
bevy_editor_pls = { version = "0.4.0", optional = true }
bevy_mod_picking = { version = "0.13.0", features = [
    "backend_raycast",
    "highlight",
], default-features = false }
bevy_tweening = "0.7.0"
hexx = { version = "0.6.0", path = "/Users/pascal/code/ManevilleF/hexx", features = [
    "bevy_010_reflect",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
dev = ["bevy_editor_pls"]

[profile.dev.package."*"]
opt-level = 3
